# claption

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  tokens.css
.github/workflows/: docker-build.yml
.hallmark/: log.json
python/claption/: __init__.py  agents.py  batch.py  cli.py  config.py  exporters.py  fireworks.py  json_utils.py  judge.py  pipeline.py  prompts.py  schemas.py  video.py
python/tests/: test_core.py
scripts/: create-slide-deck.mjs  create-slide-pdf.mjs  create-video-presentation.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/process/: route.ts
src/components/: ClaptionWorkbench.tsx
src/types/: ffprobe-static.d.ts
